test/files/continuations-neg/t5314-type-error.check
t5314-type-error.scala:7: error: type mismatch;
 found   : Int @util.continuations.package.cps[Int]
 required: Int @util.continuations.package.cps[String]
  def bar(x:Int): Int @cps[String] = return foo(x)
                                               ^
one error found
